k8s/apps/paperless/manifests/app/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compress
  namespace: paperless
spec:
  compress: {}
