k8s/apps/paperless/manifests/app/serviceHeadless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: webservice
    app.kubernetes.io/name: paperless
  name: paperless-headless
  namespace: paperless
spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app.kubernetes.io/component: webservice
    app.kubernetes.io/name: paperless
