k8s/apps/paperless/manifests/app/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-ingress
  namespace: paperless
spec:
  ingressClassName: cloudflare
  rules:
    - host: papers.krupa.net.pl
      http:
        paths:
          - backend:
              service:
                name: paperless
                port:
                  number: 8000
            path: /
            pathType: Prefix
